# MyTODO

./: .coverage  .env-example  README.md  pyproject.toml  pytest.ini
app/: config.py  database.py  exceptions.py  main.py
app/admin/: auth.py  views.py
app/back_tasks/: celeryconf.py  email_template.py
app/dao/: base.py
app/migrations/: env.py
app/migrations/versions/: 71655948f2fb_.py  7be1ce6465f9_.py  adfc2e54968a_.py  d205b8de8292_.py  e3ed6e80c39a_.py
app/task/: dao.py  models.py  router.py  schemas.py
app/task/me/: router.py
app/tests/: conftest.py
app/tests/test_api/: test_task_api.py  test_user_api.py
app/user/: auth.py  dao.py  dependencies.py  models.py  router.py  schema.py  schemas.py
app/user/auth/: auth.py
